Add team photos

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-magic-wand"></span>
+							<img src="assets/images/seyoung.jpg" alt="seyoung"/>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Seyoung</h3>
@@ -155,7 +155,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-badge"></span>
+							<img src="assets/images/hai.jpg" alt="hai"/>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Hai</h3>
@@ -178,7 +178,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-question"></span>
+							<img src="assets/images/brod.jpg" alt="brod"/>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Broderick</h3>
@@ -203,7 +203,7 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-magic-wand"></span>
+							<img src="assets/images/alison.jpg" alt="alison"/>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Alison</h3>
@@ -222,7 +222,7 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-puzzle"></span>
+							<img src="assets/images/terho.jpg" alt="terho"/>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Terho</h3>
@@ -243,7 +243,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-badge"></span>
+							<img src="assets/images/rasmus.jpg" alt="rasmus"/>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Rasmus</h3>
@@ -265,7 +265,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-question"></span>
+							<img src="assets/images/Pejam.jpg" alt="Pejam"/>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Pejam</h3>
