Add team photos

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<img src="assets/images/Pejam.jpg" alt="Pejam"/>
+							<img src="assets/images/pejam.jpg" alt="pejam"/>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Pejam</h3>
