Add team photos

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 								<ul>
 									<li>3rd year CS student</li>
 									<li>Python/Full stack developer (4M work experience)</li>
-									<li>iOS, Django, Scala, C, Git, SQLite</li>
-									<li>Born team player</li>
+									<li>iOS, Django, Scala, C, Git</li>
+									<li>Moto - "Shiny eyes"</li>
 								</ul>
 							</div>
 						</div>
@@ -143,7 +143,6 @@
 									<li>Front-end developer(3M work experience)</li>
 									<li>Scala, SQLite, Database</li>
 									<li>Android, iOS, UX/UI</li>
-									<li>Dynamic team player</li>
 								</ul>
 							</div>
 						</div>
