Do portfolio part

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#home">Home</a></li>
-						<li><a href="#services">Force</a></li>
+						<li><a href="#services">Team</a></li>
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#portfolio">works</a></li>
 					</ul>
@@ -97,7 +97,7 @@
 						<h2 class="pfblock-title">We are Mobile Mob</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							We are a team of enthusiastic Android and iOS developers. Elias and Seyoung joined the Futurice's Native Mobile workshop to get our team a good start in mobile development. The team has weekly meetings to share their knowledge. Most of our members already have work experience although from different domains.
+							We are a team of enthusiastic Android and iOS developers. We already had our kickoff at the Futurice mobile workshop in mid September. We just couldn't sit and wait till you tell us what to do. :) Anyway, it's nice to meet you!
 						</div>
 					</div>
 
@@ -210,6 +210,7 @@
 								<ul>
 									<li>2nd year CS student</li>
 									<li>Scala, SQL, XML, Android</li>
+									<li>Database</li>
 								</ul>
 							</div>
 						</div>
@@ -249,8 +250,8 @@
 							<div id="align-left" class="iconbox-desc">
 								<ul>
 									<li>2nd year CS student</li>
-									<li>IT engineer(4Y work experiance)</li>
-									<li>Scala, Java, some hacking in many others </li>
+									<li>IT engineer(4Y work experience)</li>
+									<li>Scala, Java, hacker mind</li>
 									<li>Gadget lover</li>
 								</ul>
 
@@ -272,8 +273,7 @@
 								<ul>
 									<li>2nd year CS student</li>
 									<li>Scala, Python, Java, HTML, SQL, Wordpress</li>
-									<li></li>
-									<li></li>
+									<li>Interested in wearables</li>
 								</ul>
 							</div>
 						</div>
@@ -369,13 +369,12 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
 
                     <div class="grid wow zoomIn">
-                        <figure class="effect-bubba">
-                            <img src="assets/images/item-1.jpg" alt="img01"/>
-                            <figcaption>
-                                <h2>Crazy <span>Shark</span></h2>
-                                <p>Lily likes to play with crayons and pencils</p>
-                            </figcaption>
-                        </figure>
+
+                            <img src="assets/images/cv_app.png" alt="mobile mob cv app"/>
+                        <h2><br>Mobile Mob CV app</h2><p>
+                        	Mobile Mob's Mobile native CV App <br>
+							Get it at <a href="https://play.google.com/store/apps/details?id=mobilemob.mobilemobcv">Google Play</a>
+                        </p>
                     </div>
 
                 </div>
@@ -383,13 +382,10 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
 
                     <div class="grid wow zoomIn">
-                        <figure class="effect-bubba">
-                            <img src="assets/images/item-2.jpg" alt="img01"/>
-                            <figcaption>
-                                <h2>Funny <span>Tortoise</span></h2>
-                                <p>Lily likes to play with crayons and pencils</p>
-                            </figcaption>
-                        </figure>
+                        <img src="assets/images/rss_feed_app.png" alt="RSS feed reader"/>
+					<h2><br>RSS feed reader</h2><p>
+						BBC news RSS feed reader
+					</p>
                     </div>
 
                 </div>
@@ -397,13 +393,11 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
 
                     <div class="grid wow zoomIn">
-                        <figure class="effect-bubba">
-                            <img src="assets/images/item-3.jpg" alt="img01"/>
-                            <figcaption>
-                                <h2>The <span>Hat</span></h2>
-                                <p>Lily likes to play with crayons and pencils</p>
-                            </figcaption>
-                        </figure>
+                        <img src="assets/images/food_tracker_app.png" alt="food_tracker_app"/>
+					<h2><br>FoodTracker</h2><p>
+						User input, labeling, local image library access.<br>
+						View the source code at <a href="https://github.com/YoungxHelsinki/tux_free_codes/tree/master/iOS/Food%20Tracker">Github</a>
+					</p>
                     </div>
 
                 </div>
