--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 								<ul>
 									<li>3rd year CS student</li>
-									<li>Python/Full stack developer (4M work experience)</li>
+									<li>Sound analysis / Full stack(4M work experience)</li>
 									<li>iOS, Django, Scala, C, Git</li>
 									<li>Moto - "Shiny eyes"</li>
 								</ul>
