--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<li><a href="#home">Home</a></li>
 						<li><a href="#services">Team</a></li>
                         <li><a href="#skills">Skills</a></li>
-                        <li><a href="#portfolio">works</a></li>
+                        <li><a href="#portfolio">Demos</a></li>
 					</ul>
 				</div>
 
@@ -352,7 +352,7 @@
 				<div class="col-sm-6 col-sm-offset-3">
 
 					<div class="pfblock-header wow fadeInUp">
-						<h2 class="pfblock-title">Our works</h2>
+						<h2 class="pfblock-title">Demos</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
 							We have done these projects during last two weeks <br>since the birth of Mobile Mob.
