Complete before final words

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                     <div class="grid wow zoomIn">
                         <img src="assets/images/rss_feed_app.png" alt="RSS feed reader"/>
 					<h2><br>RSS feed reader</h2><p>
-						BBC news RSS feed reader
+						BBC news RSS feed reader <br>View the source code at <a href="https://github.com/eliasmikkola/rss-mobile-news">Github</a>
 					</p>
                     </div>
 
@@ -393,18 +393,39 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
 
                     <div class="grid wow zoomIn">
-                        <img src="assets/images/food_tracker_app.png" alt="food_tracker_app"/>
-					<h2><br>FoodTracker</h2><p>
-						User input, labeling, local image library access.<br>
-						View the source code at <a href="https://github.com/YoungxHelsinki/tux_free_codes/tree/master/iOS/Food%20Tracker">Github</a>
+                        <img src="assets/images/weather_app.png" alt="Weather app"/>
+					<h2><br>Weather app</h2><p>
+						Simple weather app
 					</p>
                     </div>
 
                 </div>
+			</div>
+
+			<!-- Demo Second row -->
+			<div class="row">
+
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <div class="grid wow zoomIn">
+                            <img src="assets/images/iOS_rss_reader_app.png" alt="iOS_rss_reader_app"/>
+                        <h2><br>rss feed reader</h2><p>
+                        	 BBC news RSS feed reader<br>
+							View the source code at <a href="https://github.com/YoungxHelsinki/tux_free_codes/tree/master/iOS/Reader">Github</a>
+                        </p>
+                    </div>
+                </div>
+
+				<div class="col-xs-12 col-sm-4 col-md-4">
+                    <div class="grid wow zoomIn">
+                        <img src="assets/images/food_tracker_app.png" alt="food_tracker_app"/>
+					<h2><br>FoodTracker</h2><p>
+						User input, labeling, local image library access.<br>
+						View the source code at <a href="https://github.com/YoungxHelsinki/tux_free_codes/tree/master/iOS/Food%20Tracker">Github</a></p>
+                    </div>
+				</div>
 
 
             </div>
-
 
 		</div><!-- .contaier -->
 
@@ -448,20 +469,11 @@
 			<div class="row">
 
 				<div class="col-sm-12">
-
-					<ul class="social-links">
-						<li><a href="index.html#" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="mailto:broderick.aquilino@aalto.fi" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
-					</ul>
-
 					<p class="heart">
-                        Made with <span class="fa fa-heart fa-2x animated pulse"></span> in Nottingham
+                        Made with <span class="fa fa-heart fa-2x animated pulse"></span> in Otaniemi
                     </p>
                     <p class="copyright">
-                        © 2015 John Doe | Images: <a href="https://unsplash.com/">Unsplash</a> & <a href="http://zoomwalls.com/">Zoomwalls</a>
+                        © 2015 Mobile Mob | Images: <a href="https://unsplash.com/">Unsplash</a> & <a href="http://zoomwalls.com/">Zoomwalls</a>
 					</p>
 
 				</div>
