Edit Pejam info

--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
 								<ul>
 									<li>2nd year CS student</li>
 									<li>IT engineer(4Y work experience)</li>
-									<li>Scala, Java, hacker mind</li>
-									<li>Gadget lover</li>
+									<li>Scala, Java, Android</li>
+									<li>Gadget lover & Photographer</li>
 								</ul>
 
 							</div>
@@ -272,8 +272,8 @@
 							<div id="align-left" class="iconbox-desc">
 								<ul>
 									<li>2nd year CS student</li>
-									<li>Scala, Python, Java, HTML, SQL, Wordpress</li>
-									<li>Interested in wearables</li>
+									<li>Scala, Python, Java, HTML, CSS, Javascript, SQL, XML</li>
+									<li>Computer management systems and servers</li>
 								</ul>
 							</div>
 						</div>
